--- a/2/solution.tex
+++ b/2/solution.tex
@@ -520,21 +520,41 @@ Uvažujme nasledujúce ekvivalentné vyjadrenie:
     \item x = \textbf{even}(x) => nepodminenený zápis 1 pod čtecí hlavou
     \item x \textbf{*=} x => posun hlavy do ľava (reverzácia)
     \item x \textbf{$\setminus$=} x => posun hlavy do prava (reverzácia)
-    \item if \textbf{x \%2} == b goto N => pre symbol B = {0,1} na páske preveď prechod do stavu na riadku N
+    \item if \textbf{x \%2} == b goto N => pre symbol B = {0,1} na páske preveď prechod do stavu na riadku N. Zároveň je pridaný prechod pre symbol $C = {0,1}\setminus {B}$, ktorý
+        vykoná prechod do stavu na riadku pod aktuálnym IF príkazom.
 \end{enumerate}
 
-Z počiatočného stavu preto vykoná TS prechod s posunutím hlavy doprava realizuje príkaz $x *= 2$, doľava zas $x /= 2$. Príkaz odd /
-even sú realizované ako zápis symbolu 1 / 0 pod hlavou.
+\subsection{Demonštrácia prevodu programu na TS}
+Uvažujme príklad č.1 zo zadania domácej úlohy. Pre každý príkaz s číslom $\{0,1...,6\}$ vytvoríme stav $q_i, i \in {0,...6}$
+Pred jednotlive riadky programu následne pridáme prechody.
 
-Príkazy $x *= 2 / x /= 2$ sú prechody z aktuálneho stavu do stavu a posunutím hlavy,
-príkazy even() či odd() zas zápisom symbolu pod hlavou na páske TS.
-Príkaz return 1; predstavuje prechod pod ľubovoľným symbolom $\Sigma$ do koncového stavu TS,
-príkaz return 0 zas spustenie podprogramu, ktorý bude nekonečne cykliť do prava.
-Pre všetky stavy je pod symbolom $\Delta$ pridaný podprogram, ktorý skočí na prvý $\Delta$ na pravo od
-hlavy, vyvolá shift right, skočí na prvý delta na ľavo a zapíše do neho symbol 0.
-Týmto spôsobom je ošetrená situácia, kedy sa racionálne číslo delením rozšíruje smerom do ľava
-(nulami), čo by spôsobilo prepadnutie hlavy v TS. 
-Tak isto, pri násobení čísla tento podprogram korektne ošetrí rozšírenie binárneho kódovania o 0
-zprava.
+Pre daný program vytvoríme prechodovú funkciu nasledujúco: \\
+    $\delta(q_0, 1) = (q_6, 1)$ // if x \% 2 == 1 goto 6  \\
+    $\delta(q_0, 0) = (q_1, 0)$ // skok na ďalší riadok v programe\\
+    $\delta(q_1, 1) = (q_{1t}, R)$ //  x /= 2 \\
+    $\delta(q_1, 0) = (q_{1t}, R)$ //  x /= 2\\
+    $\delta(q_2, 1) = (q_6, 1)$ // if x \% 2 == 1 goto 6\\
+    $\delta(q_2, 0) = (q_3, 0)$ // skok na ďalší riadok v programe\\
+    $\delta(q_3, 1) = (q_{3t}, R)$ //  x /= 2 \\
+    $\delta(q_3, 0) = (q_{3t}, R)$ //  x /= 2\\
+    $\delta(q_4, 1) = (q_6, 1)$ // if x \% 2 == 1 goto 6\\
+    $\delta(q_4, 0) = (q_5, 0)$ // skok na ďalší riadok v programe\\
+    $\delta(q_5, 1) = (q_f, 1)$ // return 1\\
+    $\delta(q_5, 0) = (q_f, 0)$ // return 1\\
+    $\delta(q_6, 1) = (q_6, L)$ // return 0 (abnormálne zastavenie -\\
+    $\delta(q_6, 0) = (q_6, L)$ // return 0 ( - prepadom hlavy)\\
 
+Stavy $q_1t$ a $q_3t$ sú pomocné stavy ošetrenie posunu hlavy do prava. Pre tieto stavy je nutné vygenerovať 
+prechody, ktorý zabezpečia rozšírenie pásky o znak 0 v prípade, že po delení je pod hlavou symbol $\Delta$. 
+
+    $\delta(q_1t, \Delta) = (q_2, 0)$ \\
+    $\delta(q_1t, 0) = (q_2, 0)$ \\
+    $\delta(q_1t, 1) = (q_2, 1)$ \\
+
+    $\delta(q_3t, \Delta) = (q_4, 0)$ \\
+    $\delta(q_3t, 0) = (q_4, 0)$ \\
+    $\delta(q_3t, 1) = (q_4, 1)$ \\
+
+TS $M = (Q, \Sigma, \Gamma, \delta, q_0, q_f)$, kde $Q = \{q_0, q_1,q_1t,q_2,q_3,q_3t,q_4,q_5,q_6,_qf\}$, $\Sigma = {0,1}, \Gamma = \Sigma \cup {\Delta}$ realizuje 
+ekvivalentne program z príkladu č.1.
 \end{document}
